--- a/index.html
+++ b/index.html
@@ -153,13 +153,13 @@
 
         #footer div {
             padding: 10px;
-            font-size: 1.5em;
+            font-size: 1em;
         }
 
         footer h1 {
             font-family: Montserrat, sans-serif;
             letter-spacing: 30px;
-            font-size: 3em;
+            font-size: 1em;
             margin: 0 0 5px 0;
         }
 
@@ -181,12 +181,11 @@
     <button id="info-button" onclick="myInfo()">Information</button>
     <div id='footer'>
         <div><img src="https://uky-gis.github.io/graphics/logo-color-400px.png" class="footer-img">
-            <h1>MEDIAN RENT BY COUNTIES (2015)</h1>
-            <p>Data obtained through the American Fact Finder (<a
-                    href="http://factfinder.census.gov/">factfinder.census.gov</a>)
-                and the US Census Cartographic Boundary Shapefiles
-                (<a href="https://www.census.gov/geo/maps-data/data/cbf/cbf_counties.html">www.census.gov</a>).
-            </p>
+            <h1> CARDIAC-RELATED CHRONIC CONDITIONS PREVALENCE & COSTS - KENTUCKY (2017)</h1>
+            <br>Data obtained through the Center for Medicare & Medicaid Services (<a
+                href="https://www.cms.gov/">https://www.cms.gov</a>)
+            and the US Census Cartographic Boundary Shapefiles
+            (<a href="https://www.census.gov/geo/maps-data/data/cbf/cbf_counties.html">www.census.gov</a>).
             Map created by THE RIGHT VUE, Spring 2020
         </div>
     </div>
