--- a/index.html
+++ b/index.html
@@ -82,8 +82,8 @@
             padding: 6px 8px;
             font-size: 1em;
             /* use transparency to blend elements */
-            border: 2px solid rgba(1, 68, 46, 0.2);
-            background: rgba(224, 252, 227, 0.4);
+            border: 2px solid rgba(216, 47, 9, 0.25);
+            background: rgba(248, 230, 222, 0.75);
             box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
             color: rgba(100, 100, 100, 1);
             border-radius: 5px;
@@ -244,13 +244,16 @@
         /*  Position --- topright
         /********************************************************************************************/
 
-        var basemap_url = 'http://{s}.tiles.wmflabs.org/bw-mapnik/{z}/{x}/{y}.png'
+        var basemap_url = 'https://{s}.basemaps.cartocdn.com/rastertiles/voyager_labels_under/{z}/{x}/{y}{r}.png'
 
         // Get basemap attributes from Leaflet Providers
         var basemap_attributes = {
-            maxZoom: 8,
-            attribution: '&copy; <a href="http://www.openstreetmap.org/copyright">OpenStreetMap</a>'
+            attribution: '&copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors &copy; <a href="https://carto.com/attributions">CARTO</a>',
+            subdomains: 'abcd',
+            maxZoom: 19
         };
+
+
         // requests some map tiles
         var tiles = L.tileLayer(basemap_url, basemap_attributes);
 
