--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
             border-radius: 5px;
             /* Position is fixed next to the zoom bar */
             position: fixed;
-            top: 16%;
+            top: 150px;
             right: 52px;
             /* Draw it on top of all elements */
             z-index: 9999;
